bin/testsuite/tests/compiler/src/errors/compiler4585.swg
#global testerror "Err0555"
attr Toto(x: f32)

#[Toto()]
func titi() {}
